crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@loop_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/loop_fail.tapir
---
Error: Left hand side has type bool but right hand side has type int
   ╭─[loop_fail.tapir:1:1]
   │
 4 │     i = i + 1;
   │         ──┬──  
   │           ╰──── Mismatching types on binary operator
───╯
Error: Incorrect type, expected bool but got unknown
   ╭─[loop_fail.tapir:1:1]
   │
 4 │     i = i + 1;
   │     ─────┬────  
   │          ╰────── Incorrect type
───╯
